<resources>
    <string name="app_name">CoronaWay</string>
    <string name="menu_label_relax">Relax</string>
    <string name="menu_label_quarantine">Quarantine</string>
    <string name="menu_label_cases">Cases</string>
    <string name="new_case_text_view">+ %s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">Log In</string>
    <string name="coronaway_text">CoronaWay </string >
    <string name="coronaway_quarantine_info_text">people are quarantining here</string>
    <string name="or_text">OR</string>
    <string name="go_btn">go button</string>
    <string name="signup_text">No account yet? Sign Up</string>
    <string name="welcometext_1">Welcome</string>
    <string name="welcometext_2">Please get yourself situated \nto start tracking your quarantine</string>
    <string name="welcometext_3">And look into our resources</string>
    <string name="welcometext_4">To relax and improve mental health,</string>
    <string name="welcometext_5">To be able to look into local COVID-19 cases</string>
    <string name="welcometext_6">"Let’s get through this \ntogether"</string>
    <string name="label_totalCases">Total cases</string>
    <string name="label_Recovered">Recovered</string>
    <string name="label_deaths">Deaths</string>
    <string name="label_worldwide">Worldwide</string>
    <string name="start_quarantine_text">Starting Your \nQuarantine?</string>
    <string name="date">Date Placeholder</string>
    <string name="quarantine_info">people are currently quarantining with you here </string>
    <string name="logout">Logout</string>
    <string name="quarantine">Quarantine</string>
    <string name="message_of_the_day">Message of the Day</string>
    <string name="report_symptoms">Report Symptoms</string>
    <string name="here_to_help_txt">Don\'t worry we\'re here to help</string>
    <string name="covid_think_text">Do you think you have COVID-19?</string>
    <string name="signup_head_text">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="check_box_privacy">By signing up you accept the Terms of Service and Privacy Policy</string>
    <string name="have_account_text">Have an account? Sign In</string>
    <string name="lets_begin">Let\'s Begin</string>
    <string name="prompt_name">Full Name</string>
    <string name="no_result_found">No result found</string>
    <string name="sentence">During this pandemic, anxiety and stress levels have skyrocketed. Make time for projects that make you happy. Spend time reading, writing, knitting, decluttering, painting, meditating or doing yoga — whatever you enjoy.</string>
    <string name="contact_healthcare"><a href="http://www.bccdc.ca/health-professionals/clinical-resources/covid-19-care/health-care-provider-support">Contact Healthcare Provider</a></string>
    <string name="self_assessment"><a href="https://ca.thrive.health/covid19/en">Self-Assessment Page</a></string>
    <string name="prevent_covid"><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public">How to Prevent COVID-19</a></string>
    <string name="treat_covid"> <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/q-a-coronaviruses#:~:text=protect">How to Treat COVID-19</a></string>
    <string name="common_questions"> <a href="https://www.cdc.gov/coronavirus/2019-ncov/faq.html">Common Questions</a></string>
    <string name="howtorelax">How to Relax During COVID-19</string>
    <string name="startbtn">Get Started</string>
    <string name="asmr1">ASMR1</string>
    <string name="asmr2">ASMR2</string>
    <string name="asmr3">Meditation</string>
    <string name="day">Yesterday’s the past, tomorrow’s the future, but today is a gift. That’s why it’s called the present.</string>
    <string name="currentDay">"You're on Day: "</string>
    <string name="restart_cycle">Restart Quarantine Cycle?</string>
    <string name="restart">restart</string>
</resources>