<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username2"
        android:layout_width="249dp"
        android:layout_height="50dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="188dp" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="249dp"
        android:layout_height="50dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="261dp" />

    <EditText
        android:id="@+id/password3"
        android:layout_width="249dp"
        android:layout_height="50dp"
        android:autofillHints="@string/confirm_password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="330dp" />

    <ImageButton
        android:id="@+id/login2"
        android:layout_width="58dp"
        android:layout_height="62dp"
        android:layout_gravity="start"
        android:contentDescription="@string/go_btn"
        android:enabled="false"
        android:src="@drawable/login_icon"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="485dp" />

    <TextView
        android:id="@+id/loginText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_head_text"
        android:textColor="#0073DD"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="143dp" />
</androidx.constraintlayout.widget.ConstraintLayout>