<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuarantineFragment"
    android:background="@color/colorMainBlue"

    >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



            <TextView
                android:id="@+id/date_placeholder1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_gravity="right"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="15dp"

                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="@color/design_default_color_background" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-medium"
            android:text="@string/covid_think_text"
            android:textColor="@color/design_default_color_background"
            android:textSize="36sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45dp"
            android:gravity="left"
            android:text="@string/here_to_help_txt"
            android:textColor="@color/design_default_color_background"
            android:textSize="18sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_Contact"
                    android:layout_width="77dp"
                    android:layout_height="57dp"
                    android:layout_margin="40dp"
                    android:text="@string/contact_healthcare"
                    android:textColor="@color/design_default_color_background" />

                <TextView
                    android:id="@+id/tv_selfAssess"
                    android:layout_width="121dp"
                    android:layout_height="60dp"
                    android:layout_margin="40dp"
                    android:text="@string/self_assessment"

                    android:textColor="@color/design_default_color_background"

                    />

            </TableRow>

            <TableRow
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_prevent"
                    android:layout_width="88dp"
                    android:layout_height="45dp"
                    android:layout_margin="40dp"
                    android:text="@string/prevent_covid"
                    android:textColor="@color/design_default_color_background"

                    />

                <TextView
                    android:id="@+id/tv_treat"
                    android:layout_width="94dp"
                    android:layout_height="43dp"
                    android:layout_margin="40dp"
                    android:text="@string/treat_covid"
                    android:textColor="@color/design_default_color_background"

                    />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_Common"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="30dp"
                    android:text="@string/common_questions"
                    android:textColor="@color/design_default_color_background"
                    />


            </TableRow>

        </TableLayout>

    </LinearLayout>

</FrameLayout>