<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".VideoOptionActivity"

    android:background="@color/colorMainBlue">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id="@+id/event1_inner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="170dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/asmr1"
                android:textColor="@color/design_default_color_background"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/link1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="center"
                android:src="@drawable/asmr13"
     />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="170dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/asmr2"
                android:textColor="@color/design_default_color_background"
                android:textSize="18sp" />


            <ImageButton
                android:id="@+id/link2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="center"
                android:src="@drawable/asmr14"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="170dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/asmr3"
                android:textColor="@color/design_default_color_background"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/link3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="center"
                android:src="@drawable/asmr15" />




        </LinearLayout>
    </ScrollView>


</FrameLayout>